welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:8: error: not found: value faireV
	faireV();
        ^PictureMono2:10: error: not found: value faireV
     faireV();gauche();
     ^PictureMono2:11: error: not found: value faireV
     faireV();gauche();
     ^PictureMono2:12: error: not found: value faireV
     faireV();gauche();
     ^PictureMono2:21: error: not found: value faireMotif
faireMotif();
^