welcome.lessons.welcome.methods.picture.PictureMono2.scala.code
override def run() { def faireMotif() {
{
 

	
	faireV();
	gauche();
     faireV();gauche();
     faireV();gauche();
     faireV();gauche();
     
}

		
	

}
}
faireMotif();
